Minor Firefox Layout Fix (missing explicit width on most wanted accommodation labels leading to inconsistent width of the picture. Reduced titles font weight, too bold on firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ html {
 .search_result_label {
   width: 100%;
   font-size: 1.5vw;
-  font-weight: 1000;
+  font-weight: 700;
   padding-left: 3vw;
   /*padding-top: 1vh;*/
 }
@@ -340,13 +340,14 @@ html {
 .most_wanted_accommodation_labels_container {
   display: flex;
   flex-direction: column;
+  width: 58%;
 }
 
 .most_wanted_accommodation_name {
   height: 50%;
   width: 100%;
   font-size: 1.2vw;
-  font-weight: 1000;
+  font-weight: 700;
   margin-left: 1vw;
   padding-right: 2vw;
   padding-top: 0.8vw;
